cabal-version:      2.4
name:               hkd-option-parsing
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com

-- A copyright notice.
-- copyright:
-- category:

common common-all
  ghc-options:
    -fmax-simplifier-iterations=20 -foptimal-applicative-do
    -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language: Haskell2010

extra-source-files: CHANGELOG.md

library
  exposed-modules:  CliParser
                  , EnvParser
                  , Options
  hs-source-dirs: src
  build-depends:    base ^>=4.14.1.0
                  , higgledy
                  , lens
                  , network-uri
                  , optparse-applicative

executable hkd-option-parsing
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.1.0
                  , hkd-option-parsing
                  , higgledy
                  , lens
                  , network-uri
                  , optparse-applicative
  hs-source-dirs:   app
